# reference

./: .gitignore  AGENTS.md  CONTRIBUTING.md  README.md  pyproject.toml  reference.example.toml
reference_mcp/: __init__.py  adapters.py  cli.py  normalize.py  search.py  server.py
tests/: test_reference.py
tests/fixtures/: claude_sample.jsonl  codex_sample.jsonl
